--- a/common/pom.xml
+++ b/common/pom.xml
@@ -19,8 +19,9 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.8.1</version>
         </dependency>
     </dependencies>
 
