--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -8,5 +8,9 @@ spring:
     properties.hibernate:
         dialect: org.hibernate.dialect.PostgreSQL10Dialect
         format_sql: true
+    open-in-view: false
+  mvc:
+    format:
+      date: iso
 
 
