--- a/service/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/service/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -7,5 +7,6 @@ databaseChangeLog:
       file: db/changelog/db.changelog-1.2.sql
   - include:
       file: db/changelog/db.changelog-1.3.sql
-
+  - include:
+      file: db/changelog/db.changelog-1.4.sql
 
